--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -309,7 +309,7 @@ hamburger
     justify-content: space-between;
     padding: 2.5vh 5vw;
     gap: 1rem;
-    @include md {
+    @include sm {
         justify-content: start;
         gap: 2rem;
     }
