--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -439,6 +439,8 @@
             }
             span {
                 color: skyblue;
+                color: $span-crimson;
+                color: $brand;
             }
 
             .content-title {
