skills page itesm height

--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -788,6 +788,7 @@
         }
 
         &.section-title-1 {
+            height: 60vh;
             img {
                 // border: 3px solid yellow;
                 background-position: 20%;
@@ -843,6 +844,7 @@
         }
         &.section-title-3 {
             background: #f4f4f4;
+            height: 60vh;
             img {
                 background-position: 20%;
                 background-size: contain;
