--- a/css/style.css
+++ b/css/style.css
@@ -2488,6 +2488,9 @@ hamburger
     display: none;
   }
 }
+.skill-section .skill-section-title.section-title-1 {
+  height: 60vh;
+}
 .skill-section .skill-section-title.section-title-1 img {
   background-position: 20%;
   background-size: contain;
@@ -2541,6 +2544,7 @@ hamburger
 }
 .skill-section .skill-section-title.section-title-3 {
   background: #f4f4f4;
+  height: 60vh;
 }
 .skill-section .skill-section-title.section-title-3 img {
   background-position: 20%;
