--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,18 +1,17 @@
 // contact
-#contact {
+    // border: 2px solid red;
+    // padding: 0 5vw;
     .contact {
         flex-direction: column;
         justify-content: start;
         width: 100%;
-        margin: 0 auto;
-        // padding-bottom: 30px;
-        padding: 0vh 5vw 5vh;
         position: relative;
         transform-style: preserve-3d;
         background: #f4f4f4;
-        // border: 2px solid red;
+        // border: 2px solid blue;
+        padding: 10vh 5vw;
         @include lg {
-            padding: 5vh 5vw 5vh;
+            padding: 10vh 5vw 5vh;
         }
         // section-title
         .contact-header {
@@ -373,5 +372,5 @@
         }
 
     }
-}
+
 // end of contact 
