--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -171,7 +171,7 @@
                 
                 // MOBILE NAV CONTAINER
                 .links-container {
-                    @media (max-width: 1024px) {
+                    @media (max-width: 820px) {
                         position: absolute;
                         top: 7vh;
                         left: 100%;
@@ -461,7 +461,7 @@
                 }
                 // end of mobile screens style
                 // DESKTOP NAVLIST
-                @media (min-width: 1025px){
+                @media (min-width: 820px){
                     // border: 2px solid yellow;
                     height: 100%;
                     // hide nav avi on desktop
@@ -529,6 +529,10 @@
 
                                 &::after {
                                     display: none;
+                                }
+
+                                &.active {
+                                    color: skyblue;
                                 }
                             }
                             i {
