--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -7,7 +7,7 @@
     gap: 5vh;
     text-align: center;
     margin: 0 auto ;
-    padding: 5vh 5vw;
+    padding: 10vh 5vw;
     background-color: $background-light;
     position: relative;
     min-height: 100vh;
@@ -26,6 +26,7 @@
         .section-title {
             // border: 2px solid red;
             text-align: left;
+            margin-top: 5vh;
             &::after {
                 width: 80%;
                 // margin: 0 auto;
