--- a/sass/style.scss
+++ b/sass/style.scss
@@ -72,7 +72,7 @@ section {
         }
 
         font-weight: 500;
-        color: $overlay-blue-darker;
+        color: $overlay-blue-dark;
         // margin: 5vh 0 10vh;
         margin-bottom: 10vh;
         overflow: hidden;
