--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -238,16 +238,17 @@
                                         z-index: -1;
                                         transition: 0.3s ease letter-spacing;
                                     }
+
+                                    &.active {
+                                        color: skyblue;
+                                    }
                                 }
 
                                 i {
                                     width: 2.5rem;
                                     text-align: center;
-                                    // margin-right: 1em;
                                     padding: .5rem;
                                     color: $brand;
-                                    // opacity: .8;
-                                    // border: 1px solid $span-gold;
 
                                 }
                             }
