--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -173,20 +173,12 @@
                 // ABOUT P
                 p {
                     // border: 2px solid red;
-                    padding-right: .25rem;
-                    margin-bottom: 1.5rem;
-                    text-overflow: ellipsis;
+                    font-weight: 500;
                     text-align: left;
                     font-size: 1rem;
                     line-height: 1.5;
-                    font-weight: 500;
-                    z-index: 2;
                     transition: 1.5s;
-                    span {
-                        color: inherit;
-                        text-transform: capitalize;
-                        display: block;
-                    }
+                    
 
                     @include md {
                         .title-break {
@@ -248,10 +240,11 @@
                     
                     i {
                         // position: absolute;
-                        font-size: 1.5rem;
+                        font-size: 2rem;
                         color: $overlay-blue-light;
                         margin-right: .05rem;
                         display: block;
+                        margin-bottom: .5rem;
                         @include md {
                             font-size: 2rem;
                         }
@@ -264,6 +257,36 @@
                 }
                 .about-body {
                     // border: 2px solid blue;
+                    margin-top: 5vh;
+
+                    p {
+                        margin-bottom: 1.5rem;
+                        padding-bottom: 1rem;
+                        position: relative;
+                        z-index: 2;
+
+                        &::after {
+                            content: '';
+                            position: absolute;
+                            bottom: 0;
+                            left: 0;
+                            width: 100%;
+                            height: .1rem;
+                            opacity: .5;
+                            background: linear-gradient(90deg, #f4f4f4, $overlay-blue-light, #f4f4f4);
+                            @include md {
+                                background: linear-gradient(90deg, $overlay-blue-light, #f4f4f4);
+
+                            }
+                        }
+
+                        span {
+                            color: inherit;
+                            text-transform: capitalize;
+                            display: block;
+                        }
+                    }
+
                     &.io-item {
                         opacity: 0;
                         transform: translateY(5vh);
