--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -403,7 +403,8 @@ hamburger
     }
     position: fixed;
     bottom: 0;
-    height: 8vh;
+    height: 6vh;
+    height: auto;
     width: 100%;
     background: $overlay-footer;
     z-index: 40;
@@ -411,7 +412,7 @@ hamburger
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
-    padding: .25rem 5vw;
+    padding: .125rem 5vw;
     transform: translateY(15vh);
     transition: 1s;
 
@@ -439,8 +440,9 @@ hamburger
             place-content: center;
             place-items: center;
             transition: .25s;
-
+            padding: .5rem 2rem;
             // border: 2px solid red;
+            border-radius: .5rem;
             // width: 100%;
             i {
                 font-size: 1.25rem;
@@ -454,7 +456,10 @@ hamburger
 
         @media (max-width: 768px) {
             &:active {
-                background: $overlay-blue-light;
+                
+                a {
+                    background: $overlay-blue-light;
+                }
                 i {
                     color: $text-light;
                 }
@@ -465,8 +470,10 @@ hamburger
             transform: scale(1.05);
 
             &:hover {
-                background: $overlay-blue-light;
+                a {
+                    background: $overlay-blue-light;
 
+                }
                 i {
                     color: $span-gold;
                     color: $text-light;
