--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ hamburger
   justify-content: space-between;
   padding: 2.5vh 5vw;
   gap: 1rem;
+  margin: 1.5rem 0 0;
 }
 @media (min-width: 576px) {
   .buttons-container {
@@ -4002,7 +4003,6 @@ hamburger
   margin-top: 5vh;
 }
 .about .col-right .article-container article .about-body p {
-  margin-bottom: 1.5rem;
   padding-bottom: 1rem;
   position: relative;
   z-index: 2;
