--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -309,6 +309,7 @@ hamburger
     justify-content: space-between;
     padding: 2.5vh 5vw;
     gap: 1rem;
+    margin: 1.5rem 0 0;
     @include sm {
         justify-content: start;
         gap: 2rem;
