--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -261,6 +261,7 @@
 
                     p {
                         padding-bottom: 1rem;
+                        margin-bottom: 1rem;
                         position: relative;
                         z-index: 2;
 
