--- a/css/style.css
+++ b/css/style.css
@@ -4004,6 +4004,7 @@ hamburger
 }
 .about .col-right .article-container article .about-body p {
   padding-bottom: 1rem;
+  margin-bottom: 1rem;
   position: relative;
   z-index: 2;
 }
