--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -441,6 +441,7 @@
                 color: skyblue;
                 color: $span-crimson;
                 color: $brand;
+                color: $brand-overlay;
             }
 
             .content-title {
