--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -31,6 +31,7 @@ $span-light: #fff9;
 $light-span: #fff9;
 $brand: hsla(0, 0%, 100%, 0.6);
 $brand: #bfbfbf;
+$brand: #a6b2bf;
 $span-brand: #f72751;
 $span-violet: violet;
 $span-blue: #0000ff;
@@ -48,6 +49,7 @@ $background-light: #fff;
 $background-gray: #f4f4f4;
 $background-dark: #333;
 $background-light: #fff;
+$brand-overlay: #a6b2bf;
 
 $overlay: linear-gradient(-60deg, #29323c 0%, #485563 100%);
 $skill-item-overlay: linear-gradient(90deg, #29323c 0%, #485563 100%);
