--- a/css/style.css
+++ b/css/style.css
@@ -506,7 +506,7 @@ hamburger
   display: grid;
   place-items: center;
   isolation: isolate;
-  color: #bfbfbf;
+  color: #a6b2bf;
   text-transform: capitalize;
   animation: spinner-out 1s ease 4s forwards;
 }
@@ -652,9 +652,6 @@ hamburger
 .header.header-io .header #nav .nav-list ul li {
   opacity: 1;
 }
-.header.header-io.active-header::after {
-  background: #29323c;
-}
 .header.header-io.active-header #nav .logo {
   transform: translateY(0);
 }
@@ -703,7 +700,7 @@ hamburger
   background: linear-gradient(0deg, #deb86e, #ead2a1);
   background: linear-gradient(#f4f4f4, #fff);
   background: inherit;
-  color: #bfbfbf;
+  color: #a6b2bf;
   border-radius: 0;
   transition: 0.2s;
 }
@@ -770,13 +767,13 @@ hamburger
     transition: 0.3s ease letter-spacing;
   }
   .header .navbar #nav .nav-list .links-container ul li a.active {
-    color: skyblue;
+    color: #a6b2bf;
   }
   .header .navbar #nav .nav-list .links-container ul li i {
     width: 2.5rem;
     text-align: center;
     padding: 0.5rem;
-    color: #bfbfbf;
+    color: #a6b2bf;
   }
   .header .navbar #nav .nav-list .links-container .contact-links {
     background: #29323c;
@@ -800,7 +797,7 @@ hamburger
     margin-right: 0.25rem;
     padding-right: 0.25rem;
     width: 1.5rem;
-    border-right: 1px solid #bfbfbf;
+    border-right: 1px solid #a6b2bf;
   }
   .header .navbar #nav .nav-list .links-container.active {
     left: 0;
@@ -858,7 +855,7 @@ hamburger
   }
   .header .navbar #nav .nav-list .links-container.active .contact-links a:hover i {
     transition: 0.25s;
-    color: #bfbfbf;
+    color: #a6b2bf;
   }
 }
 .header .navbar #nav .nav-list .links-container .nav-logo {
@@ -960,8 +957,7 @@ hamburger
     transform: translateX(-50%);
     width: 0%;
     height: 2px;
-    background-color: #ead2a1;
-    background-color: #ead2a1;
+    background-color: #a6b2bf;
     transition: 0.3s ease;
   }
   .header .navbar #nav .nav-list ul li:hover::before {
@@ -982,14 +978,14 @@ hamburger
     display: none;
   }
   .header .navbar #nav .nav-list ul li a.active {
-    color: skyblue;
+    color: #a6b2bf;
   }
   .header .navbar #nav .nav-list ul li i {
     display: none;
   }
   .header .navbar #nav .nav-list ul li:hover a {
     transition: 0.3s ease;
-    color: #ead2a1;
+    color: #f4f4f4;
   }
   .header .navbar #nav .nav-list ul li:hover i {
     transition: 0.3s;
@@ -1182,7 +1178,7 @@ hamburger
   font-size: 0.95rem;
   font-size: clamp(.95rem, 2vw, 1.125rem);
   font-weight: 400;
-  color: #bfbfbf;
+  color: #a6b2bf;
 }
 .banner .hero .hero-content .hero-title .hero-title-header a {
   color: inherit;
@@ -1240,7 +1236,7 @@ hamburger
   font-size: 1.25rem;
   font-size: clamp(1.25rem, 2.25vw, 1.5rem);
   position: relative;
-  color: #bfbfbf;
+  color: #a6b2bf;
   margin-top: 0.5rem;
   font-family: "Montserrat", sans-serif;
 }
@@ -1406,7 +1402,8 @@ hamburger
 .banner .hero .hero-index-content span {
   color: skyblue;
   color: #dc143c;
-  color: #bfbfbf;
+  color: #a6b2bf;
+  color: #a6b2bf;
 }
 .banner .hero .hero-index-content .content-title {
   margin-bottom: 25vh;
@@ -1789,7 +1786,7 @@ hamburger
   position: absolute;
   left: -0.5em;
   bottom: 1em;
-  background-image: radial-gradient(circle at top, #bfbfbf, 50%, #000);
+  background-image: radial-gradient(circle at top, #a6b2bf, 50%, #000);
   animation: scene 20s infinite linear reverse;
 }
 @keyframes ball-bounce {
@@ -1853,7 +1850,7 @@ hamburger
   font-size: 0.25em;
   text-transform: uppercase;
   transition: 0.25s;
-  color: #bfbfbf;
+  color: #a6b2bf;
   pointer-events: none;
 }
 .cube .left:hover,
@@ -2206,7 +2203,7 @@ hamburger
   color: #f4f4f4;
 }
 .skills-section .skills-content .skills-page-container .skills-bottom .skills-item ul li::marker {
-  color: #bfbfbf;
+  color: #a6b2bf;
   color: #fff4;
 }
 .skills-section .skills-content .skills-page-container .skills-bottom .skills-item::after {
@@ -2780,7 +2777,7 @@ hamburger
 }
 .contact .contact-items .contact-item .title h3 {
   color: #f4f4f4;
-  color: #bfbfbf;
+  color: #a6b2bf;
   font-size: 0.85rem;
   font-weight: 600;
   position: relative;
@@ -3011,7 +3008,7 @@ hamburger
   font-weight: 500;
   margin: 0.5rem 0;
   text-transform: capitalize;
-  color: #bfbfbf;
+  color: #a6b2bf;
   transition: 0.3s;
 }
 @media (min-width: 768px) {
@@ -3074,7 +3071,7 @@ hamburger
   opacity: 0;
 }
 #projects .projects .all-projects .project-item .project-tile .project-info a i {
-  color: #bfbfbf;
+  color: #a6b2bf;
   font-size: 0.8rem;
   transition: 0.25s;
   opacity: 0.5;
@@ -3160,7 +3157,7 @@ hamburger
 }
 #projects .projects .all-projects .project-item .tech-list ul li {
   font-size: 0.8em;
-  color: #bfbfbf;
+  color: #a6b2bf;
   list-style: none;
   padding: 0.4em 0.3em;
   margin-right: 0.1em;
@@ -3317,7 +3314,7 @@ hamburger
   transition: 0.25s;
 }
 .work .work-container .item .item-header .item-meta-data li:hover {
-  color: #bfbfbf;
+  color: #a6b2bf;
 }
 .work .work-container .item .item-header .item-description {
   margin: 1rem 0;
@@ -3656,7 +3653,7 @@ hamburger
   border-radius: 0.25rem;
 }
 .work .work-items .work-item .scroll-snap::-webkit-scrollbar-thumb {
-  background-color: #bfbfbf;
+  background-color: #a6b2bf;
   border-radius: 0.25rem;
 }
 .work .work-items .work-item .scroll-snap::-webkit-scrollbar-track {
@@ -3845,7 +3842,7 @@ hamburger
   font-size: 0.6em;
   font-weight: 600;
   text-transform: capitalize;
-  color: #bfbfbf;
+  color: #a6b2bf;
   background-color: #dc143c;
   border-radius: 10px;
   transition: 0.5s ease;
@@ -3959,17 +3956,17 @@ hamburger
   padding: 0 0.25rem;
 }
 .about .col-right .article-container article p a.cv:hover {
-  color: #bfbfbf;
+  color: #a6b2bf;
 }
 @media (max-width: 820px) {
   .about .col-right .article-container article p a:active {
-    color: #bfbfbf;
+    color: #a6b2bf;
     background: #15191e;
   }
 }
 @media (min-width: 820px) {
   .about .col-right .article-container article p a:hover {
-    color: #bfbfbf;
+    color: #a6b2bf;
     background: #15191e;
   }
 }
@@ -4202,7 +4199,7 @@ hamburger
   right: 1rem;
   top: 1rem;
   font-size: 4rem;
-  color: #bfbfbf;
+  color: #a6b2bf;
   opacity: 0.1;
   transition: 0.25s;
 }
@@ -4226,7 +4223,7 @@ hamburger
   margin-bottom: 0.25rem;
   text-transform: capitalize;
   color: #f4f4f4;
-  color: #bfbfbf;
+  color: #a6b2bf;
   font-weight: 400;
   font-family: "Kanit", sans-serif;
   transition: 1s ease;
@@ -4449,7 +4446,7 @@ hamburger
 }
 #footer .footer .footer-bottom .footer-item .footer-list li i {
   width: 1.5rem;
-  color: #bfbfbf;
+  color: #a6b2bf;
   transition: 0.25s;
 }
 #footer .footer .footer-bottom .footer-item .footer-list li a {
@@ -4543,7 +4540,7 @@ hamburger
 }
 #footer .footer .brand h2 {
   font-family: "Ubuntu", sans-serif;
-  color: #bfbfbf;
+  color: #a6b2bf;
   font-weight: 500;
   font-size: 1.2em;
   letter-spacing: 0.1em;
@@ -4892,7 +4889,7 @@ section .section-title.active-item span {
   display: block;
 }
 #thanks .home-link i {
-  color: #bfbfbf;
+  color: #a6b2bf;
   font-size: 1rem;
   margin-right: 0.5rem;
 }
