--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -241,6 +241,11 @@
 
                                     &.active {
                                         color: $brand;
+                                        &::after {
+                                        color: rgba(240, 248, 255, 0.05);
+                                            transform: translate(-50%, -50%) scale(1.4);
+                                            letter-spacing: initial;
+                                        }
                                     }
                                 }
 
@@ -441,10 +446,10 @@
                             transition: .3s;
 
                             a {
-                                color: $link-gold;
+                                color: $brand;
 
                                 i {
-                                    color: $link-gold;
+                                    color: $brand;
                                 }
                             }
                         }
