--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -168,7 +168,6 @@
                 }
             }
             .nav-list {
-                
                 // MOBILE NAV CONTAINER
                 .links-container {
                     @media (max-width: 820px) {
@@ -289,7 +288,7 @@
                             }
                         }
 
-                        // active mobile  navbar
+                        // ACTIVE ASIDE
                         &.active {
                             left: 0;
                             z-index: 50;
@@ -298,7 +297,6 @@
                                 transition: 1.5s;
                                 opacity: 1;
                                 transform: translateX(0);
-
                             }
 
                             ul {
@@ -307,9 +305,17 @@
                                     transform: translateX(0);
                                     opacity: 1;
 
+                                    // a {
+                                    //     &.active {
+                                    //         &::after {
+                                    //             color: rgba(240, 248, 255, 0.05);
+                                    //                 transform: translate(-50%, -50%) scale(1.4);
+                                    //                 letter-spacing: initial;
+                                    //             }
+                                    //     }
+                                    // }
                                     i {
                                         transition: 1s ease .8s;
-                                        // color: $span-gold;
                                     }
 
                                     &:nth-child(1) {
@@ -317,27 +323,27 @@
                                     }
 
                                     &:nth-child(2) {
-                                        transition-delay: .4s;
+                                        transition-delay: .35s;
                                     }
 
                                     &:nth-child(3) {
-                                        transition-delay: .5s;
+                                        transition-delay: .4s;
                                     }
 
                                     &:nth-child(4) {
-                                        transition-delay: .6s;
+                                        transition-delay: .45s;
                                     }
 
                                     &:nth-child(5) {
-                                        transition-delay: .7s;
+                                        transition-delay: .5s;
                                     }
 
                                     &:nth-child(6) {
-                                        transition-delay: .8s;
+                                        transition-delay: .55s;
                                     }
 
                                     &:nth-child(7) {
-                                        transition-delay: .9s;
+                                        transition-delay: .6s;
                                     }
 
                                 }
@@ -349,19 +355,19 @@
                                     transform: translateY(0);
 
                                     &:nth-child(1) {
-                                        transition-delay: .65s;
+                                        transition-delay: .6s;
                                     }
 
                                     &:nth-child(2) {
-                                        transition-delay: .75s;
+                                        transition-delay: .65s;
                                     }
 
                                     &:nth-child(3) {
-                                        transition-delay: .85s;
+                                        transition-delay: .7s;
                                     }
 
                                     &:nth-child(4) {
-                                        transition-delay: .95s;
+                                        transition-delay: .75s;
                                     }
 
                                     &:hover {
@@ -425,8 +431,6 @@
                             font-family: $font-content;
                             transition: .2s ease-in-out;
                             // border: 1px solid red;
-                            // width: 40%;
-                            // end of link text on hover
 
                         }
 
@@ -434,32 +438,24 @@
                             margin-right: .5em;
                             padding: 0;
                             text-align: left;
-                            // color: $text-white-trans;
                             border-radius: 5px;
-                            // border: 1px solid $text-light;
                             background: $overlay-blue-darker;
-                            // box-shadow: $box-light-top-sm;
                         }
 
-                        // li hover state
-                        &:hover {
-                            transition: .3s;
 
+                        // LIST ITEM HOVER 
+                        &:hover {
                             a {
                                 color: $brand;
+                                transition: .25s;
 
-                                i {
-                                    color: $brand;
-                                }
-                            }
-                        }
-
-                        // end of li hover state
-                        &:hover {
-                            a {
                                 &::after {
                                     transform: translate(-50%, -50%) scale(1);
                                     letter-spacing: initial;
+                                }
+
+                                i {
+                                    color: $brand;
                                 }
                             }
                         }
@@ -470,14 +466,15 @@
                 @media (min-width: 820px){
                     // border: 2px solid yellow;
                     height: 100%;
-                    // hide nav avi on desktop
-                        .nav-logo { display: none;}
-                    // end of hide nav avi on desktop
-                    // remove hamburger from desktop view
-                    .hamburger {
-                        display: none;
-                    }
-                    // end of remove hamburger from desktop view
+                    // HIDE LOGO AND HAMBURGER ON DESKTOP
+                        .nav-logo {
+                            display: none;
+                        }
+
+                        .hamburger {
+                            display: none;
+                        }
+
                     ul {
                         display: flex;
                         justify-content: flex-end;
